CTRL+click on an image in a UV or Image Editor crashes Blender #63492

Closed
opened 2019-04-11 15:01:22 +02:00 by Marcin Twarowski · 11 comments

System Information
Windows-10-10.0.16299 64 Bits
GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
2.80 (sub 55), branch: blender2.7, commit date: 2019-04-09 18:12, hash: 009dbc2bc9
Exact steps for others to reproduce the error
uv_editor_crash.blend

  • Open blend file. Switch to either Lookdev or Rendered mode (in Eevee).
  • CTRL + Mouse Click on the image in a UV or Image Editor window. Mouse click has to be either left or right, depending on your settings.
  • Crash.
**System Information** Windows-10-10.0.16299 64 Bits GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** 2.80 (sub 55), branch: blender2.7, commit date: 2019-04-09 18:12, hash: `009dbc2bc9` **Exact steps for others to reproduce the error** [uv_editor_crash.blend](https://archive.blender.org/developer/F6930983/uv_editor_crash.blend) - Open blend file. Switch to either Lookdev or Rendered mode (in Eevee). - CTRL + Mouse Click on the image in a UV or Image Editor window. Mouse click has to be either left or right, depending on your settings. - Crash.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

#63631 was marked as duplicate of this issue

#63631 was marked as duplicate of this issue
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

I can confirm in Ubuntu 18.04, it gives this error in the terminal:

RNA_int_get: IMAGE_OT_curves_point_set.size not found.
I can confirm in Ubuntu 18.04, it gives this error in the terminal: ``` RNA_int_get: IMAGE_OT_curves_point_set.size not found. ```

Added subscriber: @rjg

Added subscriber: @rjg

col_tot is zero in the division which causes the crash.

>	blender.exe!image_sample_rect_color_ubyte(const ImBuf * ibuf, const rcti * rect, unsigned char * r_col, float * r_col_linear) Zeile 3085	C

 	blender.exe!image_sample_apply(bContext * C, wmOperator * op, const wmEvent * event) Zeile 3161	C
 	blender.exe!image_sample_invoke(bContext * C, wmOperator * op, const wmEvent * event) Zeile 3279	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Zeile 1343	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Zeile 2144	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Zeile 2462	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Zeile 2720	C
 	blender.exe!wm_event_do_handlers(bContext * C) Zeile 3141	C
 	blender.exe!WM_main(bContext * C) Zeile 421	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Zeile 505	C
`col_tot` is zero in the division which causes the crash. ``` > blender.exe!image_sample_rect_color_ubyte(const ImBuf * ibuf, const rcti * rect, unsigned char * r_col, float * r_col_linear) Zeile 3085 C blender.exe!image_sample_apply(bContext * C, wmOperator * op, const wmEvent * event) Zeile 3161 C blender.exe!image_sample_invoke(bContext * C, wmOperator * op, const wmEvent * event) Zeile 3279 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Zeile 1343 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Zeile 2144 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Zeile 2462 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Zeile 2720 C blender.exe!wm_event_do_handlers(bContext * C) Zeile 3141 C blender.exe!WM_main(bContext * C) Zeile 421 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Zeile 505 C ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-04-12 11:57:08 +02:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 777446ed7d

This issue was referenced by 777446ed7d05c35ef2ab98f83b7968daaf74344b
Member

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63492
No description provided.